# spiderfoot-ng

./: .bumpversion.toml  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  THANKYOU  TODO.md  VERSION  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  sf.py  sfcli.py  sflib.py  sfwebui.py
.github/workflows/: codeql-analysis.yml  docker-publish.yml  publish-pypi.yml  tests.yaml
correlations/: __init__.py
modules/: sfp__stor_stdout.py  sfp_abstractapi.py  sfp_alienvault.py  sfp_azureblobstorage.py  sfp_builtwith.py  sfp_digitaloceanspace.py  sfp_dnsdumpster.py  sfp_dnsresolve.py  sfp_googleobjectstorage.py  sfp_greynoise.py  sfp_greynoise_community.py  sfp_intelx.py  sfp_s3bucket.py  sfp_securitytrails.py  sfp_tool_trufflehog.py  sfp_webserver.py  sfp_wikileaks.py  sfp_xforce.py
spiderfoot/: __version__.py  db.py  helpers.py  threadpool.py
spiderfoot/static/: package-lock.json  package.json
spiderfoot/static/css/: dark.css  spiderfoot.css
spiderfoot/static/js/: spiderfoot.newscan.js  spiderfoot.scanlist.js
spiderfoot/templates/: FOOTER.tmpl  HEADER.tmpl  error.tmpl  newscan.tmpl  scaninfo.tmpl
test/: lint-requirements.txt  requirements.txt
test/integration/: test_sf.py  test_sfwebui.py
test/unit/: test_spiderfoot.py  test_spiderfootscanner.py
test/unit/modules/: test_sfp_accounts.py  test_sfp_subdomain_takeover.py
